--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,16 @@
 discordLink: https://discord.gg/CattoShield
+
+#message that gets sent after a player gets muted
+afterMuteMessage: §cYou just got muted, appeal this mute at https://discord.gg/CattoShield.
+
+#message that gets sent when a muted player tries to chat or message
 muteMessage: §cYou are currently muted, appeal this mute at https://discord.gg/CattoShield.
+
+#message that gets sent when a player gets unMuted
+unMuteMessage: §7You are no longer muted.
+
+#message that gets sent after a player gets banned
+afterBanMessage: §cYou just got banned, appeal this ban at https://discord.gg/CattoShield.
+
+#message that gets sent when a banned player tries to log in
 banMessage: §cYou are currently banned, appeal this ban at https://discord.gg/CattoShield.
